Hotfix/sonar (#29)
Resolvido Bugs e ajuste coverage sonar.